feat: update get product category
