# src/infra/docs/swagger.json
@@ -161,6 +161,17 @@
         ],
         "description": "Rota de Products da API",
         "summary": "Retorna os Produtos da API",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "description": "A categoria dos produtos a serem consultados."
+          }
+        ],
         "responses": {
           "200": {
             "description": "Produtos retornados com sucesso",
@@ -433,98 +444,6 @@
                     "productId": {
                       "type": "string",
                       "example": "ca97b811-a559-44b0-b3b0-1a9a84309aef"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "Product not found error"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "error"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/products/category/{category}": {
-      "get": {
-        "tags": [
-          "Products"
-        ],
-        "description": "Rota de Products da API",
-        "summary": "Retorna os Produto de uma determinada categoria da API",
-        "parameters":[
-          {
-            "in": "path",
-            "name": "category",
-            "schema": {
-              "type": "string"
-            },
-            "required": true,
-            "description": "Categoria do produto"
-          }],
-        "responses": {
-          "200": {
-            "description": "Produtos da categoria retornadas com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string",
-                        "example": "5ebcea6f-2391-46aa-a5bc-ab5d98527f13"
-                      },
-                      "name": {
-                        "type": "string",
-                        "example": "Coca Cola"
-                      },
-                      "category": {
-                        "type": "string",
-                        "example": "drink"
-                      },
-                      "price": {
-                        "type": "number",
-                        "example": "6"
-                      },
-                      "description": {
-                        "type": "string",
-                        "example": "Drink description"
-                      },
-                      "image": {
-                        "type": "string",
-                        "example": "http://host.com/image"
-                      }
                     }
                   }
                 }
